<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/enableNotificationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications" />

    <TextView
        android:id="@+id/listenerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listener_disabled" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/forwardingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward_notifications" />

    <ListView
        android:id="@+id/appList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/saveAppsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_apps" />

</LinearLayout>
